feat: add style.css and script.js

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <title>Hello World</title>
+    <link rel="stylesheet" type="text/css" href="../Style/style.css">
+    <script src="../Script/script.js"></script>
+    <title>Chifoumi</title>
 </head>
 <body>
-    <h1>Hello World</h1>
+    <h1>Bienvenue dans le jeu de Chifoumi</h1>
+    
 </body>
 </html>
