--- a/HTML/index.html
+++ b/HTML/index.html
@@ -7,7 +7,16 @@
     <title>Chifoumi</title>
 </head>
 <body>
+    <main>
     <h1>Bienvenue dans le jeu de Chifoumi</h1>
-    
+    <section aria-label ="joueur">
+        <p>Choisir une option</p>
+         <div class="buttons">
+                <button id="pierre">Pierre 🗿</button>
+                <button id="papier">Papier 📃</button>
+                <button id="ciseaux">Ciseaux✂️</button>
+            </div>
+    </section>
+    </main>
 </body>
 </html>
