feat: add compteur victoire/defaite/nul and réinitialiser buttom

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -17,6 +17,16 @@
                 <button id="ciseaux">Ciseaux✂️</button>
             </div>
     </section>
+    <section aria-label="Résultat du jeu">
+            <p id="resultat" aria-live="polite"></p>
+        </section>
+
+        <section aria-label="Compteurs">
+            <p>Victoires : <span id="victoires">0</span></p>
+            <p>Défaites : <span id="defaites">0</span></p>
+            <p>Nuls : <span id="nuls">0</span></p>
+            <button id="reset">Réinitialiser le compteur</button>
+        </section>
     </main>
 </body>
 </html>
