fix: insertion script.js in body

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -3,13 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="../Style/style.css">
-    <script src="../Script/script.js"></script>
     <title>Chifoumi</title>
 </head>
 <body>
     <main>
     <h1>Bienvenue dans le jeu de Chifoumi</h1>
-    <section aria-label ="joueur">
+    <section aria-label ="Choix du joueur">
         <p>Choisir une option</p>
          <div class="buttons">
                 <button id="pierre">Pierre 🗿</button>
@@ -27,6 +26,7 @@
             <p>Nuls : <span id="nuls">0</span></p>
             <button id="reset">Réinitialiser le compteur</button>
         </section>
+            <script src="../Script/script.js"></script>
     </main>
 </body>
 </html>
