correction de bug d'affichage

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="/Style/style.css">
+    <link rel="stylesheet" type="text/css" href="styles/style.css">
     <title>Chifoumi</title>
 </head>
 <body>
@@ -26,7 +26,7 @@
             <p>Nuls : <span id="nuls">0</span></p>
             <button id="reset">Réinitialiser le compteur</button>
         </section>
-            <script src="/Script/script.js"></script>
+            <script src="/script/script.js"></script>
     </main>
 </body>
 </html>
